--- a/DocDB/public/stylesheets/main.css
+++ b/DocDB/public/stylesheets/main.css
@@ -88,9 +88,6 @@ div #outer{
 .featurette-divider{
 	width: 100%;
 }
-.panel{
-	cursor: -webkit-grab;
-}
 .panel:hover{
 	opacity: 0.9;
     filter: alpha(opacity=90); /* For IE8 and earlier */
@@ -104,9 +101,6 @@ div #outer{
 	color: #003;
 	text-decoration: none;
 	font-weight:normal;
-}
-.panel:active{
-	cursor: -webkit-grabbing;
 }
 
 
@@ -140,4 +134,19 @@ div #outer{
 
 #previewModalFooter button{
 	margin-top:70px;
+}
+
+.zipContent ul{
+	max-height: 200px;
+	overflow-y: auto;
+}
+.zipContent ul li{
+	font-size:80%;
+}
+
+.panel-body span, .panel-body img, .panel-heading{
+	cursor: -webkit-grab;
+}
+.panel-body span:active, .panel-body img:active, .panel-heading:active{
+	cursor: -webkit-grabbing;
 }
