mp3 stops playing when modal closed. avi flv and m4v download on preview fixed

--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -103,13 +103,13 @@
 		</div>
 
 		<hr class="featurette-divider">
-<!--		<div class="jumbotron">
+		<div class="jumbotron" style="display:none">
 			<h2>Drop files via link</h2>
 				<div id="content3">
 					<input type="text" class="form-control" id="linkUpload" placeholder="Put Your link here">
 				</div>
 		</div>
-		<hr class="featurette-divider"> -->
+		<hr class="featurette-divider">
 <!-- This is used as the file preview template -->
 	<div id="template" class="file-row">
         <div>
