Default dropzone message

--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -27,7 +27,7 @@
 				if(typeof localStorage[i] != 'undefined')
 					tag[i] = localStorage[i];
 				else
-					tag[i] = "file";
+					tag[i] = "DocDB";
 				if( localStorage["oldTags"] == "")
 					addAutoComp(tag[i], 'oldTags');
 			}
